@@ -4,6 +4,7 @@ grass (7.0.3-4) UNRELEASED; urgency=medium
   * Add patch to fix various spelling errors.
   * Drop explicit python-numpy dependency, included in ${python:Depends}
     via dh_numpy.
+  * Have dh_python & dh_numpy act on specific packages only.
 
  -- Bas Couwenberg <sebastic@debian.org>  Sat, 09 Apr 2016 20:20:29 +0200
 
